<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yaren_description</name>
  <version>0.1.0</version>
  <description>
    <p>URDF Description package for yaren_description</p>
    <p>This package contains configuration data, 3D models and launch files for the yaren_description robot</p>
  </description>
  <author email="TODO@email.com">TODO</author>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license file="LICENSE">BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>


  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_index_python</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

